2007-10-19  Akim Demaille  <demaille@gostai.com>

	Use BOOST_FOREACH.
	* src/ucommand.cc: At random places.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Reject for&.
	* src/parser/bison/ugrammar.y: here.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	libport use.
	WARNING: Apparently someone decided to use libport/Makefile.am,
	which is wrong afai can remember...  Now both liburbi *and* the
	kernel will want to install libport.  Well done pal.
	* Makefile.am (SVN_EXTERNALS): Add libport so that libport-ci
	works as expected.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Use BOOST_FOREACH.
	* src/ucommand.cc: At some random places, while it compiles.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Fix notag handling.
	* src/ucommand.cc (UCommand_EXPR::execture_): Display the result
	when there is no tag, so that the top level displays the result.
	As a consequence, inner expressions still display something, I
	don't really know how to avoid this with a simple Q&D hack.
	* src/ucommand.hh, src/ucommand.hxx (tag_info_get): New.
	* src/uconnection.cc (UConnection::mkPrefix): Don't display notag
	tags.

2007-10-19  Guillaume Deslandes  <deslandes@gostai.com>

	Add .automerge_moves file.
	* .automerge_moves: New.
	The file only contains help for remembering.
	File list need to be appended.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Missing member init.
	* src/ucommand.cc (UCommand::UCommand): Initialize is_channel_.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	<< vs. :.
	* src/parser/bison/ugrammar.y (is_colon): Rename as...
	(is_channel): this.
	Use it in the <</: rule.
	* src/ucommand.hh, src/ucommand.cc (UCommand::is_channel_)
	(UCommand::is_channel_get, UCommand::is_channel_set): New.
	Use them where it seems appropriate.
	* src/ucommand.hxx: New.
	* src/Makefile.am: Adjust.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Support seq(n).
	* src/uexpression.cc (UExpression::eval_FUNCTION_1): Do it.
