@@ -24,7 +24,9 @@
 
 # include <cstdarg>
 # include <sstream>
-# include <boost/thread.hpp>
+# if ! defined URBI_ENV_AIBO
+#  include <boost/thread.hpp>
+# endif
 
 # include "libport/compiler.hh"
 # include "libport/lockable.hh"
@@ -263,8 +265,10 @@ public:
   /// Shows debug or not.
   bool debugOutput;
 
+# if ! defined URBI_ENV_AIBO
   /// Used to synchronize message reception.
   boost::recursive_mutex mutex;
+# endif
 
 private:
   /// Name of the main device.
